LogIn y Registro con Js

--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
          <h1>LogIn</h1>
-         <form action="#">
+         <form action="#" id="formu">
             <input type="text" placeholder="Usuario" id="Usuario" name="Usuario" required>
             <input type="password" placeholder="Contraseña" id="Pass" name="Pass" required>
             <div class="pwd"> <a href="#">¿ Has olvidado tu contraseña ? </a></div>
