--- a/registro.html
+++ b/registro.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style-registro.css'>
 </head>
-<body>
+<body background="/Proyecto Marcas/imgs/up.jpg">
     <div class="contenedor">
          <h1>Registro</h1>
          <form action="#" id="formu">
