--- a/registro.html
+++ b/registro.html
@@ -13,7 +13,7 @@
          <form action="#" id="formu">
             <input type="Nombre" placeholder="Nombre" id="Nombre" name="Nombre"  required>
             <input type="email" placeholder="Email" id="email" name="email" required>
-            <input type="fecha" placeholder="Fecha de Nacimiento" id="fecha" name="fecha"  required>
+            <input type="date" placeholder="Fecha de Nacimiento" id="fecha" name="fecha"  required>
             <input type="text" placeholder="Nombre de Usuario" id="Usuario" name="Usuario"  required>
             <input type="password" placeholder="Contraseña" id="Pass" name="Pass"  required>
             <input type="password" placeholder="Repita la contraseña" id="Pass2" name="Pass2"  required>
