--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
     <div class="contenedor">
          <h1>Registro</h1>
          <form action="#" id="formu">
-            <input type="Nombre" placeholder="Nombre" id="Nombre" name="Nombre"  required>
+            <input type="text" placeholder="Nombre" id="Nombre" name="Nombre"  required>
             <input type="email" placeholder="Email" id="email" name="email" required>
             <input type="date" placeholder="Fecha de Nacimiento" id="fecha" name="fecha"  required>
             <input type="text" placeholder="Nombre de Usuario" id="Usuario" name="Usuario"  required>
