--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
+    <script src='menu.js'></script>
     <title>TrailerFlix</title>
 </head>
 <body>
@@ -31,47 +31,10 @@
         </ul>        
     </nav>
 
-    <main>
-        <div class="contenedor">
-            <div class="tarjeta">
-                <h2 class="titulo">Oferta Base</h2>
-                <div class="cuerpo"> <img src="/imgs/cards0.jpg" alt="muestra"><p>lorem ipsum</p></div>
-                <div class="pie"><a href="#">Más información</a>
-            </div>
-        </div>
-
-        <div class="contenedor">
-            <div class="tarjeta">
-                <h2 class="titulo">Oferta Base</h2>
-                <div class="cuerpo"> <img src="/imgs/cards0.jpg" alt="muestra"><p>lorem ipsum</p></div>
-                <div class="pie"><a href="#">Más información</a>
-            </div>
-        </div>
-
-        <div class="contenedor">
-            <div class="tarjeta">
-                <h2 class="titulo">Oferta Base</h2>
-                <div class="cuerpo"> <img src="/imgs/cards0.jpg" alt="muestra"><p>lorem ipsum</p></div>
-                <div class="pie"><a href="#">Más información</a>
-            </div>
-        </div>
-
-        <div class="contenedor">
-            <div class="tarjeta">
-                <h2 class="titulo">Oferta Base</h2>
-                <div class="cuerpo"> <img src="/imgs/cards0.jpg" alt="muestra"><p>lorem ipsum</p></div>
-                <div class="pie"><a href="#">Más información</a>
-            </div>
-        </div>
-
-        <div class="contenedor">
-            <div class="tarjeta">
-                <h2 class="titulo">Oferta Base</h2>
-                <div class="cuerpo"> <img src="/imgs/cards0.jpg" alt="muestra"><p>lorem ipsum</p></div>
-                <div class="pie"><a href="#">Más información</a>
-            </div>
-        </div>
-
+    <main >
+       <section>
+            <article id="miDiv"></article>
+       </section>
     </main>
 
 
