--- a/pelicula.html
+++ b/pelicula.html
@@ -23,7 +23,8 @@
 
         <div class="menu-item-home"><a href="menu.html"><img class="icon" src="imgs/home.png"></a></div>
         <div class="menu-item-search">
-            <input type="text" placeholder="Buscar" required>
+            <input type="text" id="searchInput" placeholder="Buscar" required>   
+                <button onclick="searchMovies()">Buscar</button>  
         </div>
         <div class="menu-item-exit"><a href="login.html"><img class="icon" src="imgs/exit.png"></a></div>
 
